--- a/hello-world.html
+++ b/hello-world.html
@@ -122,18 +122,30 @@
 <audio data-key="75" src="sounds/clap.wav"></audio>
 <audio data-key="76" src="sounds/clap.wav"></audio>
 <script>
-	window.addEventListener('keydown',function(e){
+	
+	function playSound(e){
 		const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
 		const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
 		
-		if(!audio) return; //stop
+		if(!audio) return; //stop the function from running all together
 		
-		audio.currentTime=0;
+		audio.currentTime=0;//rewind to the start
 		audio.play();
 		console.log(key);
 		
 		key.classList.add('playing');
-	});
+	}
+	
+	function removeTransition(e){
+		if(e.propertyName !== 'transform') return;
+		// skip it if it's not a transform
+		this.classList.remove('playing');
+	}
+	
+	const keys = document.querySelectorAll('.key');
+	keys.forEach(key => key.addEventListener('transitionend',removeTransition));
+	
+	window.addEventListener('keydown',playSound);
 </script>
 
 </body>
